(issue 60) changed alignment of multi-check, multi-select, and textarea to left aligned
(issue 96) added ContentService paramters, BdrsPluginFacade, and request parameters to velocity template engine in StaticPageController to allow variable replacement in static pages

fixed issue with locations still showing all survey location attributes on recording forms

(issue 64) surrounded textarea view-only inputs with <pre> tag, allowing whitespace characters to be visible

--- a/src/main/css/bdrs/bdrs.css
+++ b/src/main/css/bdrs/bdrs.css
@@ -915,6 +915,7 @@ table.yearlysightings {
     border: 1px solid #C0C0C0;
     margin: 0;
     padding: 0;
+    width: 8.3%
 }
 
 .yearlysightings .today {
@@ -963,7 +964,15 @@ table.yearlysightings {
     resize: none;
     margin: 0;
     padding: 0;
+}
+
+#sightingTable input[type=text], 
+#sightingTable input[type=password] {
     text-align: center;
+}
+
+#sightingTable textarea {
+    text-align: left;
 }
 
 #sightingsContainer {
